criado estilos de títulos

--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
     <meta name="Author" content="Gabriele Alves">
 
     <title>Sapataria do Oswaldo</title>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
 </head>
 <h1>Sapataria do Oswaldo</h1>
 <h2> Desde 1950 consertando seu sapato</h2>
+<main>
+    <article></article>
+<h1> Filosofia de Trabalho</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores perferendis repudiandae saepe dicta dolores ad possimus fugiat doloremque accusamus ipsa!
 </p>
+</main>
+
+</main>
 
 <body>
     
 </body>
 </html>
+
+</article>
+</main>
