--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 </head>
 
 <body>
-    <nav class="menu-navegacao">
-        <ul>
+    <nav>
+        <ul class="menu-navegacao">
             <li><a href="index.html">Home</a></li>
             <li><a href="quemsomos.html">Quem somos</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
             <li><a href="contato.html">Contato</a></li>
+
         </ul>
     </nav>
     <header>   
-        <h1 class="page-title"> Sapataria do Oswaldo</h1>
+        <h1 class="page-title"> Sapataria da Gabriele</h1>
         <h2> Desde 1950 consertando o seu sapato</h2>
     </header>
 
@@ -69,7 +70,7 @@
             
         <address>
         Rua José Barbosa de Araújo, 102<br>
-                                                                       <br>Jardim Santa Barbara-São Paulo</address>
+        <br>Jardim Santa Barbara-São Paulo</address>
         <br>CEP 04842-523
         </address>
         </footer>
